--- a/Contact.html
+++ b/Contact.html
@@ -12,7 +12,7 @@
              <a href="Contact.html"><p>Contact</p>
         </div>
         <div class="row mid">
-            <h1>Cindi </h1>
+            <h1>My Contact</h1>
             <img class="headshot" src="headshot.jpg">
             <h1>Morales</h1>
         </div>
